Cleaning up extra files, clean up setup.py, clean up Makefile

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 cards
+commands = flake8 cards tests
 
 [testenv]
 setenv =
