- automate the 1 manual test in both cli and api versions - mark tracer bullet tests with pytest.mark.smoke - mark cli tests with pytest.mark.cli - mark alac tests with pytest.mark.alac - add coverage to tox runs - add markers smoke, alac, cli - add smoketest and alactest targets to Makefile

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,5 +5,8 @@ universal = 0
 exclude = docs
 
 [tool:pytest]
-addopts = --showlocals
-
+addopts = --showlocals --strict
+markers =
+    smoke: subset of tests
+    alac: "Act Like A Customer"  tests
+    cli: command line interface tests
