--- a/tox.ini
+++ b/tox.ini
@@ -11,15 +11,11 @@ deps = flake8
 commands = flake8 cards tests
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+
 commands =
     pip install -U pip
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} --cov={envsitepackagesdir}/cards
 
 
