--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: python
+
 python:
 - 3.6
-install: pip install -U tox-travis
-script: tox
+
+install:
+- pip install -U tox-travis
+- pip install -U codecov
+
+script:
+- tox
+
+after_success:
+- codecov
