Move cards into a src dir

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ python =
 [testenv:flake8]
 basepython = python
 deps = flake8
-commands = flake8 cards tests
+commands = flake8 src tests
 
 [testenv]
 deps =
