Add 3.6-dev and 3.7-dev to travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: python
 
 python:
 - 3.6
+- "3.6-dev"  # 3.6 development branch
+- "3.7-dev"  # 3.7 development branch
 
 install:
 - pip install -U tox-travis
