Start support for Python 3.7 and dataclasses

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,17 @@
 [tox]
-envlist = py36, flake8
+envlist =
+    py36,
+    py37,
+    coverage,
+    flake8
+
+skip_missing_interpreters = true
 
 [travis]
 python =
     3.6: py36
+    3.6-dev: py36
+    3.7-dev: py37
 
 [testenv:flake8]
 basepython = python
