--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,12 @@
-bu$ld: false  # Not a C# project
 environment:
   matrix:
-    - TOXENV: py36
-
-matrix:
-  fast_finish: true
+    - PYTHON: "C:\\Python36"
 
 install:
-  - C:\Python36\python -m pip install -U pytest
+  - "%PYTHON%\\python.exe -m pip install --upgrade wheel pytest flake8 tox"
+
+build: off
 
 test_script:
-  - C:\Python36\scripts\tox -e py36
+  - "%PYTHON%\\python.exe -m tox -e py36"
 
-cache:
-  - '%LOCALAPPDATA%\pip\cache'
