--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist =
     py36,
     py37,
-    coverage,
+    coverage-report,
     flake8
 
 skip_missing_interpreters = true
@@ -12,6 +12,13 @@ python =
     3.6: py36
     3.6-dev: py36
     3.7-dev: py37
+
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
+commands =
+    coverage combine
+    coverage report
 
 [testenv:flake8]
 basepython = python
@@ -23,6 +30,6 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 
 commands =
-    pytest --basetemp={envtmpdir} --cov={envsitepackagesdir}/cards
+    coverage run --parallel -m pytest --basetemp={envtmpdir} {posargs}
 
 
