Add a coverage-erase step for tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist =
+    coverage-erase,
     py36,
     py37,
     coverage-report,
@@ -13,6 +14,12 @@ python =
     3.6-dev: py36
     3.7-dev: py37
 
+[testenv:coverage-erase]
+deps = coverage
+skip_install = true
+commands =
+    coverage erase
+
 [testenv:coverage-report]
 deps = coverage
 skip_install = true
@@ -21,7 +28,6 @@ commands =
     coverage report
 
 [testenv:flake8]
-basepython = python
 deps = flake8
 commands = flake8 src tests
 
