Change flake8 invokation in tox to only run in python3.6

--- a/tox.ini
+++ b/tox.ini
@@ -28,8 +28,12 @@ commands =
     coverage report
 
 [testenv:flake8]
+basepython = python3.6
+skip_install = true
 deps = flake8
-commands = flake8 src tests
+commands = python -m flake8 --show-source src setup.py {posargs}
+           python -m flake8 --show-source tests {posargs}
+
 
 [testenv]
 deps =
