add --show-source flag to flake8

--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,8 @@ commands =
 basepython = python3.6
 skip_install = true
 deps = flake8
-commands = python -m flake8 --show-source src setup.py {posargs}
-           python -m flake8 --show-source tests {posargs}
+commands = python -m flake8 --show-source src setup.py
+           python -m flake8 --show-source tests
 
 
 [testenv]
