Refactor the test directories and test file names so they are easier to discuss.

--- a/tox.ini
+++ b/tox.ini
@@ -15,13 +15,10 @@ python =
     3.7-dev: py37
 
 [testenv:coverage-erase]
-deps = coverage
 skip_install = true
-commands =
-    coverage erase
+commands = coverage erase
 
 [testenv:coverage-report]
-deps = coverage
 skip_install = true
 commands =
     coverage combine
@@ -30,14 +27,12 @@ commands =
 [testenv:flake8]
 basepython = python3.6
 skip_install = true
-deps = flake8
 commands = python -m flake8 --show-source src setup.py
            python -m flake8 --show-source tests
 
 
 [testenv]
-deps =
-    -r{toxinidir}/requirements_dev.txt
+deps = -r{toxinidir}/requirements_dev.txt
 
 commands =
     coverage run --parallel -m pytest --basetemp={envtmpdir} {posargs}
