dataclasses only, even for 3.6

--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,7 @@ commands =
 [testenv:flake8]
 basepython = python3.6
 skip_install = true
-commands = python -m flake8 --show-source src setup.py
-           python -m flake8 --show-source tests
+commands = python -m flake8 --show-source src tests setup.py
 
 
 [testenv]
