--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,20 @@ language: python
 python:
 - 3.6
 - 3.6-dev
-- 3.7-dev
+
+matrix:
+include:
+  - python: 3.7
+    env: TOXENV=py37
+    dist: xenial      # required for Python 3.7 (travis-ci/travis-ci#9069)
+    sudo: required    # required for Python 3.7 (travis-ci/travis-ci#9069)
+  - python: nightly
+    env: TOXENV=py38
+    dist: xenial      # required for Python 3.8 (travis-ci/travis-ci#9069)
+    sudo: required    # required for Python 3.8 (travis-ci/travis-ci#9069)
+allow_failures:
+  - python: nightly
+
 
 install:
 - pip install -U tox-travis
