--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ matrix:
       env: TOXENV=py38
       dist: xenial      # required for Python 3.8 (travis-ci/travis-ci#9069)
       sudo: required    # required for Python 3.8 (travis-ci/travis-ci#9069)
+    - python: 3.6
+      env: TOXENV=flake8
   allow_failures:
     - python: nightly
 
