Set toxenv for all env in travis config as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: python
 matrix:
   include:
     - python: 3.6
+      env: TOXENV=py36
     - python: 3.7
       env: TOXENV=py37
       dist: xenial      # required for Python 3.7 (travis-ci/travis-ci#9069)
