WIP: refactor: move noowner/owner/done into a filter param for various methods, to get ready for more attributes

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,8 @@
 [tox]
 envlist =
-    coverage-erase,
     py36,
     py37,
     py38,
-    coverage-report,
     flake8
 
 skip_missing_interpreters = true
@@ -12,16 +10,7 @@ skip_missing_interpreters = true
 [travis]
 python =
     3.6: py36
-
-[testenv:coverage-erase]
-skip_install = true
-commands = coverage erase
-
-[testenv:coverage-report]
-skip_install = true
-commands =
-    coverage combine
-    coverage report
+    3.7: py37
 
 [testenv:flake8]
 basepython = python3.6
@@ -30,9 +19,10 @@ commands = python -m flake8 --show-source src tests setup.py
 
 
 [testenv]
-deps = -r{toxinidir}/requirements_dev.txt
+deps =
+    pytest
+    pytest-cov
+    flake8
 
-commands =
-    coverage run --parallel -m pytest --basetemp={envtmpdir} {posargs}
-
+commands = pytest --cov={envsitepackagesdir}/cards tests
 
