--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,12 @@ skip_missing_interpreters = true
 python =
     3.6: py36
     3.7: py37
+    
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38, flake8
 
 [testenv:flake8]
 basepython = python3.6
