moving toward flit

--- a/tox.ini
+++ b/tox.ini
@@ -1,34 +1,29 @@
 [tox]
 envlist =
-    py36,
     py37,
     py38,
+    py39,
     flake8
 
 skip_missing_interpreters = true
 
-[travis]
-python =
-    3.6: py36
-    3.7: py37
-    
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38, flake8
+    3.9: py39
 
 [testenv:flake8]
-basepython = python3.6
+basepython = python3.8
+deps = flake8
 skip_install = true
-commands = python -m flake8 --show-source src tests setup.py
+commands = python -m flake8 --show-source cards tests
 
 
 [testenv]
 deps =
     pytest
     pytest-cov
-    flake8
 
 commands = pytest --cov={envsitepackagesdir}/cards tests
 
