--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
-requires = ["tinydb", "click", "tabulate"]
+requires = ["tinydb", "typer", "tabulate"]
 requires-python=">=3.7"
 description-file="README.md"
 
@@ -23,4 +23,4 @@ description-file="README.md"
 test = [ "pytest", "pytest-cov", ]
 
 [tool.flit.scripts]
-cards = "cards:cards_cli"
+cards = "cards:main"
