force tests to run from tests dir

--- a/tox.ini
+++ b/tox.ini
@@ -26,5 +26,6 @@ deps =
     pytest
     pytest-cov
 
-commands = pytest --cov={envsitepackagesdir}/cards tests
+changedir = tests
+commands = pytest --cov={envsitepackagesdir}/cards
 
