move to src layout finish final bit of functionality, calling with no command runs list

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ python =
 basepython = python3.8
 deps = flake8
 skip_install = true
-commands = python -m flake8 --show-source cards tests
+commands = python -m flake8 --show-source src tests
 
 
 [testenv]
@@ -26,6 +26,5 @@ deps =
     pytest
     pytest-cov
 
-changedir = tests
-commands = pytest --cov={envsitepackagesdir}/cards
+commands = pytest --cov={envsitepackagesdir}/cards --cov=tests tests
 
