blacken, pre-commit, import order

--- a/tox.ini
+++ b/tox.ini
@@ -31,3 +31,10 @@ commands = pytest --cov={envsitepackagesdir}/cards --cov=tests tests
 [flake8]
 max-line-length = 88
 ignore = B008
+
+[testenv:pre-commit]
+basepython = python3.8
+skip_install = true
+deps = pre-commit
+commands =
+    pre-commit run --all-files --show-diff-on-failure
