try a new github action workflow

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,12 @@ isolated_build = True
 skip_missing_interpreters = true
 
 
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+
+
 [testenv:flake8]
 basepython = python3.8
 deps = flake8
