try a new github action workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/cache@v1
+      - name: Set up Python
       - uses: actions/setup-python@v1
         with:
           python-version: 3.8
-      - run: pip install tox tox-gh-actions
-      - run: tox -e flake8
+      - name: flake8
+      - run: pip install flake8
+      - run: flake8 src tests
