--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.8
+      - name: Run flake8
         run: |
           pip install flake8
           flake8 src tests
