--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
-requires = ["tinydb", "typer", "tabulate"]
+requires = ["tinydb==3.15.1", "typer==0.2.1", "tabulate==0.8.7"]
 requires-python=">=3.7"
 description-file="README.md"
 
