Add the codespell problem matcher
So any codespell pre-commit bits found are surfaced as GitHub annotations within PRs.

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v1
+      - uses: codespell-project/codespell-problem-matcher@v1
       - run: pip install pre-commit
       - run: pre-commit --version
       - run: pre-commit install
