Major rewrite/refactor

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,2 @@
 [pytest]
-addopts = --showlocals --strict
-markers =
-    smoke: subset of tests
-    alac: "Act Like A Customer"  tests
+addopts = --showlocals --strict-markers --strict-config
