--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,15 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
-requires = ["tinydb==3.15.1", "typer==0.2.1", "tabulate==0.8.7"]
+requires = ["tinydb==4.3.0", "typer==0.3.2", "rich==9.3.0"]
 requires-python=">=3.7"
 description-file="README.md"
 
 [tool.flit.metadata.requires-extra]
-test = [ "pytest", "pytest-cov", ]
+test = [ "pytest==6.0.0rc1", "pytest-cov", ]
 
 [tool.flit.scripts]
 cards = "cards:app"
+
+[tool.black]
+line-length = 88
