--- a/tox.ini
+++ b/tox.ini
@@ -1,42 +1,13 @@
 [tox]
-envlist =
-    py37,
-    py38,
-    py39,
-    flake8
-
+envlist = py37, py38, py39, py310
 isolated_build = True
-skip_missing_interpreters = true
-
-
-[gh-actions]
-python =
-    3.7: py37
-    3.8: py38
-    3.9: py39
-
-
-[testenv:flake8]
-basepython = python3.9
-deps = flake8
-skip_install = true
-commands = python -m flake8 --show-source src tests
-
+skip_missing_interpreters = True
 
 [testenv]
 deps =
-    pytest
-    pytest-cov
-
-commands = pytest --cov={envsitepackagesdir}/cards --cov=tests tests
-
-[flake8]
-max-line-length = 88
-ignore = B008
-
-[testenv:pre-commit]
-basepython = python3.8
-skip_install = true
-deps = pre-commit
+  pytest
+  faker
+  pytest-cov
 commands =
-    pre-commit run --all-files --show-diff-on-failure
+  pytest --cov=cards --cov=tests --cov-fail-under=100 {posargs}
+
