--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,10 @@
 [build-system]
-requires = ["flit_core >=2,<3"]
+requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
-[tool.flit.metadata]
-module = "cards"
-author = "Brian Okken"
-author-email = "brian+pypi@pythontest.com"
-home-page = "https://github.com/okken/cards"
+[project]
+name = "cards"
+authors = [{name = "Brian Okken", email = "brian+pypi@pythontest.com"}]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
@@ -14,16 +12,29 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: 3.10",
 ]
-requires = ["tinydb==4.3.0", "typer==0.3.2", "rich==9.3.0"]
 requires-python=">=3.7"
-description-file="README.md"
+dynamic = ["version", "description"]
+dependencies = [
+    "tinydb==4.5.1",
+    "typer==0.3.2",
+    "rich==10.7.0"
+]
 
-[tool.flit.metadata.requires-extra]
-test = [ "pytest==6.0.0rc1", "pytest-cov", ]
+[project.optional-dependencies]
+test = [
+    "pytest",
+    "faker",
+    "tox",
+    "coverage",
+    "pytest-cov",
+]
 
-[tool.flit.scripts]
+[project.urls]
+Home = "https://github.com/okken/cards"
+
+[project.scripts]
 cards = "cards:app"
 
 [tool.black]
