--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,10 @@
 [pytest]
-addopts = --showlocals --strict-markers --strict-config
+addopts =
+    --strict-markers
+    --strict-config
+    -ra
+
+markers =
+    num_cards: number of cards to prefill for cards_db fixture
+
+testpaths = tests
