--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,5 @@ deps =
   faker
   pytest-cov
 commands =
-  pytest --cov=cards --cov=tests --cov-fail-under=100 {posargs}
+  pytest --cov=cards --cov-fail-under=100 {posargs}
 
