--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,28 +4,21 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "cards"
-authors = [{name = "Brian Okken", email = "brian+pypi@pythontest.com"}]
+authors = [{name = "Brian Okken"}]
 classifiers = [
     "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
 ]
-requires-python=">=3.7"
+requires-python=">=3.8"
 dynamic = ["version", "description"]
 dependencies = [
-    "tinydb==4.5.1",
-    "typer==0.3.2",
-    "rich==10.7.0"
+    "tinydb==4.8.0",
+    "typer==0.9.0",
+    "rich==13.5.2"
 ]
 
 [project.optional-dependencies]
 test = [
     "pytest",
-    "faker",
     "tox",
     "coverage",
     "pytest-cov",
@@ -37,5 +30,13 @@ Home = "https://github.com/okken/cards"
 [project.scripts]
 cards = "cards:app"
 
-[tool.black]
-line-length = 88
+[tool.coverage.run]
+branch = true
+show_missing = true
+
+[tool.coverage.paths]
+source = [ "src", "*/site-packages", ]
+
+[tool.coverage.report]
+exclude_also = [ "if __name__ == .__main__.:", ]
+ignore_errors = true
