updates from course

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ deps =
   pytest
   pytest-cov
 commands =
+  coverage debug config
   pytest --cov=cards --cov=tests --cov-branch --cov-fail-under=100 {posargs}
 package = wheel
 wheel_build_env = .pkg
@@ -19,3 +20,17 @@ addopts =
     -ra
 testpaths = tests
 pythonpath = tests/cli
+
+[coverage:run]
+branch = True
+
+[coverage:paths]
+source =
+    src
+    */site-packages"
+
+[coverage:report]
+exclude_also =
+    if __name__ == .__main__.:
+
+ignore_errors = True
