--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,34 @@
 [tox]
-envlist = py37, py38, py39, py310, py311, py312
-isolated_build = True
+envlist = py38, py39, py310, py311, py312
 skip_missing_interpreters = True
 
 [testenv]
 deps =
   pytest
-  faker
   pytest-cov
 commands =
-  pytest --cov=cards --cov=tests --cov-fail-under=100 {posargs}
+  pytest --cov=cards --cov=tests --cov-branch --cov-fail-under=100 {posargs}
+package = wheel
+wheel_build_env = .pkg
 
+[pytest]
+addopts =
+    --strict-markers
+    --strict-config
+    -ra
+testpaths = tests
+pythonpath = tests/cli
+
+[coverage:run]
+branch = True
+
+[coverage:paths]
+source =
+    src
+    */site-packages"
+
+[coverage:report]
+exclude_also =
+    if __name__ == .__main__.:
+
+ignore_errors = True
