--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ deps =
   pytest
   pytest-cov
 commands =
-  pytest --cov=cards --cov=tests --cov-branch --cov-fail-under=100 {posargs}
+  pytest --cov=cards --cov=tests {posargs}
 package = wheel
 wheel_build_env = .pkg
 
@@ -16,6 +16,9 @@ addopts =
     --strict-markers
     --strict-config
     -ra
+    --cov-branch 
+    --cov-fail-under=100 
+    --color=yes 
 testpaths = tests
 pythonpath = tests/cli
 
