--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,19 @@ authors = [{name = "Brian Okken"}]
 classifiers = [
     "License :: OSI Approved :: MIT License",
 ]
-requires-python=">=3.8"
+requires-python=">=3.10"
 dynamic = ["version", "description"]
 dependencies = [
-    "tinydb==4.8.0",
-    "typer==0.9.0",
-    "rich==13.6.0"
+    "tinydb==4.8.2",
+    "typer==0.17.4",
+    "rich==14.1.0"
 ]
 
 [project.optional-dependencies]
 test = [
     "pytest",
     "tox",
+    "tox-uv",
     "coverage",
     "pytest-cov",
 ]
