--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ name = "cards"
 authors = [{name = "Brian Okken"}]
 classifiers = [
     "License :: OSI Approved :: MIT License",
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
+    'Programming Language :: Python :: 3.14',
 ]
 requires-python=">=3.10"
 dynamic = ["version", "description"]
